--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,7 +35,7 @@
 
       gtag("config", "G-1WCX1F3KD9");
     </script>
-    <title>QQ Zoom</title>
+    <title>Shikai's Profolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
