feat: upload blog pages

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -35,6 +35,7 @@
 
       gtag("config", "G-1WCX1F3KD9");
     </script>
+    <link rel="shortcut icon" href="./logo.ico" />
     <title>Shikai Jin</title>
   </head>
   <body>
